# qmarinetheme

./: CMakeLists.txt  README.md
archlinux/: PKGBUILD
chameleon/: CMakeLists.txt  chameleon.json  chameleonstyle.cpp  chameleonstyle.h  chameleonstyleplugin.cpp  chameleonstyleplugin.h  common.h  dstyleanimation.cpp  dstyleanimation.h  resources.qrc
chameleon/chameleonstyle/: chameleontools.hpp  drawcomplexcontrol.cpp  drawcontrol.cpp  drawhittestcomplexcontrol.cpp  generatedbrush.cpp  pixelmetric.cpp  polish.cpp  primitive.cpp  sizefromcontents.cpp  sizehint.cpp  subcontrolrect.cpp  subelementreact.cpp  unpolish.cpp
consolehelp/: CMakeLists.txt  main.cpp
marin_platformplugin/: marine.json  marinePlatformTheme.cpp  marinePlatformTheme.h  marineThemePlugin.cpp  marineThemePlugin.h
platformplugins/: CMakeLists.txt  marine.json  marinePlatformTheme.cpp  marinePlatformTheme.h  marineThemePlugin.cpp  marineThemePlugin.h  marinekde6.json  marinetest.json  qxdgdesktopportalfiledialog.cpp  qxdgdesktopportalfiledialog_p.h
plugin/: CMakeLists.txt  simplestyleplugin.cpp
styles/: CMakeLists.txt  simplestyle.cpp  simplestyle.h  simplestyle.json  simplestyleplugin.cpp  simplestyleplugin.h
stylewindow/: CMakeLists.txt  main.cpp  norwegianwoodstyle.cpp  norwegianwoodstyle.h  styles.qrc  widgetgallery.cpp  widgetgallery.h
